<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentEnd="true"
    android:layout_alignParentBottom="true"
    tools:context=".CreatePlantActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="25dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="50dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="124dp"
        android:layout_height="124dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:srcCompat="@mipmap/ic_plant_placeholder"
        tools:srcCompat="@mipmap/ic_plant_placeholder" />

    <EditText
        android:id="@+id/editTextPlantName"
        android:layout_width="225dp"
        android:layout_height="35dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/create_plant_name_placeholder"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/editTextPlantSpecies"
        android:layout_width="225dp"
        android:layout_height="35dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/create_plant_species_placeholder"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/editTextPlantName" />

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/editTextPlantName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/editPlantAge"
        android:layout_width="225dp"
        android:layout_height="35dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/create_plant_age_placeholder"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/editTextPlantSpecies" />

    <EditText
        android:id="@+id/editPlantContainerType"
        android:layout_width="225dp"
        android:layout_height="35dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/create_plant_container_type_placeholder"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/editPlantOrigin" />

    <EditText
        android:id="@+id/editPlantHeight"
        android:layout_width="225dp"
        android:layout_height="35dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/create_plant_height_placeholder"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/switchBonsaiAble" />

    <EditText
        android:id="@+id/editPlantOrigin"
        android:layout_width="225dp"
        android:layout_height="35dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/create_plant_origin_placeholder"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/editPlantHeight" />

    <EditText
        android:id="@+id/editPlantDate"
        android:layout_width="225dp"
        android:layout_height="35dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/create_plant_date_placeholder"
        android:inputType="date"
        android:focusable="false"
        android:clickable="true"
        android:maxLines="1"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/editPlantAge" />

    <Switch
        android:id="@+id/switchBonsaiAble"
        android:layout_width="225dp"
        android:layout_height="35dp"
        android:layout_marginTop="12dp"
        android:text="@string/create_plant_bonsaiAble_text"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/editPlantDate" />

    <Switch
        android:id="@+id/switchSellable"
        android:layout_width="225dp"
        android:layout_height="35dp"
        android:layout_marginTop="12dp"
        android:text="@string/create_plant_sellable_text"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/editPlantContainerType" />

    <Button
        android:id="@+id/btnSavePlant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/create_plant_save_button"
        app:layout_constraintEnd_toStartOf="@+id/btnSelectPhoto"
        app:layout_constraintHorizontal_bias="0.379"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/switchSellable" />

    <Button
        android:id="@+id/btnSelectPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="32dp"
        android:text="@string/create_plant_changePhoto_button"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/switchSellable" />

</androidx.constraintlayout.widget.ConstraintLayout>